# timbre-design

./: .gitignore  AGENTS.md  CONSTITUTION.md  LICENSE  README.md  pyproject.toml  task1.md  参考.md  需求.md
src/timbre_design/: __init__.py  __main__.py  assets.py  casting.py  cli.py  controls.py  library.py  matcher.py  models.py  voxcpm.py
src/timbre_design/data/: __init__.py  voices_v2_106.json  voices_v2_106.schema.md  voices_v2_96.json
tests/: test_casting.py  test_controls.py  test_library.py  test_matcher.py
