[project]
name = "timbre-design"
version = "0.1.0"
description = "VoxCPM2-oriented Chinese timbre library, matching, and voice casting tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
timbre-design = "timbre_design.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timbre_design"]

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
